# autoforge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
autoforge/: base.py
autoforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autoforge/ensemble/: __init__.py  forest_.py
autoforge/linear_model/: .linear_regression.py.kate-swp  __init__.py  elastic_net.py  lasso_regression.py  linear_regression.py  logistic_regression.py  ridge_regression.py  sgd_classifier.py  sgd_regression.py
autoforge/metrics/: __init__.py  classification.py  regression.py
autoforge/neighbors/: __init__.py  knn.py
autoforge/neural_net/: activations.py  mlp_classifier.py  mlp_regressor.py  test_example.py  tester.ipynb
autoforge/neural_net/.ipynb_checkpoints/: tester-checkpoint.ipynb
autoforge/neural_net/test_folder/: backup_reg.py
autoforge/preprocessing/: __init__.py  polynomial_features.py
autoforge/svm/: __init__.py  svm_model.py
autoforge/tree/: __init__.py  _nodes.py  decision_tree_classifier.py  decision_tree_regression.py
autoforge/utils/: __init__.py  math_utils.py
