[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoforge"
version = "0.1.0"
authors = [
  { name="Midhun G Raj" },
]
description = "An educational machine learning library written from scratch in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autoforge*"]
